# Projeto_2/src/model/dto/LivroDto.ts
@@ -1,0 +1,13 @@
+export class LivroDto {
+    id: number;
+    titulo: string;
+    autor: string;
+    categoriaId : number;
+
+    constructor(id?: number, titulo?: string, autor?: string, categoriaId?: number){
+        this.id = id || 0;
+        this.titulo = titulo || '';
+        this.autor = autor || '';
+        this.categoriaId = categoriaId || 0;
+    }
+}
