# Projeto_2/src/model/dto/LivroRequestDto.ts
@@ -1,0 +1,11 @@
+export class LivroRequestDto {
+    titulo: string;
+    autor: string;
+    categoriaId : number;
+
+    constructor(titulo?: string, autor?: string, categoriaId?: number){
+        this.titulo = titulo || '';
+        this.autor = autor || '';
+        this.categoriaId = categoriaId || 0;
+    }
+}
